--- a/06_js1_2_home_cond_func/main-JS1-2-hw.css
+++ b/06_js1_2_home_cond_func/main-JS1-2-hw.css
@@ -8,7 +8,7 @@ html, body {
   display: block;
 }
 
-h1 {
+h1, h2, h3 {
   margin: 1% 0% 1% 0%;/*top-right-bottom-left*/  padding: 0% 0% 0% 5%;/*top-right-bottom-left*/
   font-size: 20px;  line-height: 1.30em;   color: rgb(58, 102, 29);
 }
