--- a/05_js1_1_home_variables_math_comparson/main-JS1-1-hw.css
+++ b/05_js1_1_home_variables_math_comparson/main-JS1-1-hw.css
@@ -1,21 +1,29 @@
 * {
-  box-sizing: border-box;  margin: auto; 
+  box-sizing: border-box;
+  margin: 0 auto;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-html, body {
-  margin: 1% 0% 1% 0%;/*top-right-bottom-left*/  padding: 0% 0% 0% 0%;/*top-right-bottom-left*/
+body {
   display: block;
+  padding: 5vh 1vw 1vh 5vw;
+  background-image: linear-gradient(to bottom, rgb(59, 100, 95), rgb(51, 78, 75));
+  color: rgb(228, 228, 228);
+  font-family: 'Abel';
+  height: 100vh;
+}
+
+h1, h2, h3, p, ul, li, a {
+  color: rgb(228, 229, 228);
+  border: none;
+  font-weight: 300;
+  line-height: 1em;
 }
 
 h1 {
-  margin: 1% 0% 1% 0%;/*top-right-bottom-left*/  padding: 0% 0% 0% 5%;/*top-right-bottom-left*/
-  font-size: 20px;  line-height: 1.30em;   color: rgb(58, 102, 29);
+  color: rgb(194, 165, 181);
 }
 
-p {
-  margin: 1% 0% 1% 0%;/*top-right-bottom-left*/  padding: 0% 0% 0% 5%;/*top-right-bottom-left*/
-  color: rgb(83, 83, 83);
+li {
+  list-style-type: square;
 }
-
-/*-----THIS IS THE END OF DESKTOP SIZE CSS--------------------------------------------------THIS IS THE END OF DESKTOP SIZE CSS-----*/
