--- a/09_js2_1_class_dom/w09-JS2-1-class-notes-style.css
+++ b/09_js2_1_class_dom/w09-JS2-1-class-notes-style.css
@@ -13,16 +13,15 @@ body {
   height: 100%;
 }
 
-h1, h2, h3, p, ul, li, a {
+h1, h2, h3, h5, h6, p, ul, li, a {
   color: rgb(228, 229, 228);
   border: none;
   font-weight: 300;
-  line-height: 1em;
+  line-height: 1.2em;
 }
 
 h1 {
   color: rgb(194, 165, 181);
-  padding-top: 1vh;
 }
 
 li {
